# code-review-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  setup.sh
src/: agent.py  app.py  config.py  prompt.py  review_strategy.py  sections.py  server.py
src/utils/: __init__.py  params.py  path_utils.py
tests/: conftest.py  test_agent.py  test_app.py  test_decorators.py  test_review_strategy.py  test_sections.py
